# py-check-reqs

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/check_reqs/: __init__.py  check.py  exceptions.py
tests/: conftest.py  test_e2e.py  test_simple.py
